--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Impusic</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="/css/home/index.css" rel="stylesheet" type="text/css"/>
 </head>
@@ -11,9 +11,18 @@
 <body>
     <div class="header">
             <h1 class="title">Impusic</h1>
-            <div class="bottomLogar">
-                <a class="logar" href="#demo-modal">Entrar</a>
-              </div>
+            <div class="navigations">
+                <a class="Links" href="/">Home</a>
+                <a class="Links" href="/sobre">Sobre</a>
+            </div>
+            <div class="bottonsLogarCadastrar">
+                <div class="bottomLogar">
+                    <a class="logar" href="#demo-modal">Entrar</a>
+                </div>
+                <div class="bottomCadastrar">
+                    <a class="logar" href="/cadastro"><p>Cadastro</p></a>
+                </div>
+            </div>
                
                 <div id="demo-modal" class="modal">
                 <div class="modal__content">
@@ -50,9 +59,7 @@
                     </div>
                   </div>
 
-            <div class="bottomCadastrar">
-                <a class="logar" href="/cadastro"><p>Cadastro</p></a>
-            </div>
+           
         </div>
 
         
