--- a/src/cssposLogin/channel/index.css
+++ b/src/cssposLogin/channel/index.css
@@ -98,12 +98,18 @@ body{
     
 }
 .linkVideo{
+    text-decoration: none;
     position: relative;
     width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+.linkVideo:hover{
+    border: groove;
+    border-width: 0.1px;
+    border-color: darkgrey;
 }
 .thumbnail{
     margin-left: auto;
@@ -112,6 +118,7 @@ body{
     height: 100px;
 }
 .title{
+    text-decoration: none;
     margin-top: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
