--- a/src/cssposLogin/editChannel/index.css
+++ b/src/cssposLogin/editChannel/index.css
@@ -68,6 +68,15 @@ input[type='file']{
     overflow: hidden;
 }
 
+.alert{
+    display: block;
+    position: absolute;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(0, 0, 0, 0.9);
+    padding: 5px;
+}
+
 .imgBanner{
     width: 100%;
     aspect-ratio: 32/5;
